# ajemi

./: .gitignore  Cargo.toml  README.md  README_RIME.md  ajemi.dict.yaml  ajemi.schema.yaml  build.bat  build.ps1  build.rs  default.custom.yaml  installer.iss  justfile  release.ps1  setup.ps1  unreg.bat  unreg.ps1  weasel.custom.yaml
res/: ajemi.schema.yaml  ajemi_swift.schema.yaml  conf.toml  conf_darkmode.toml  conf_‍default.toml
res/dict/: emoji.dict  sitelen.dict
res/rime schema/: ajemi.schema.yaml  ajemi_swift.dict.yaml  ajemi_swift.schema.yaml
res/schema/: emoji.schema  sitelen.schema
src/: conf.rs  consts.rs  dict.rs  engine.rs  engine2.rs  extend.rs  global.rs  install.rs  layout.rs  lib.rs  log.rs  logger.rs  register.rs
src/engine/: long_glyph.rs  mod.rs  schema.rs  sentence.rs
src/ime/: candidate_list.rs  composition.rs  composition_sink.rs  dict.rs  edit_session.rs  key_event_sink.rs  langbar_button.rs  langbar_item.rs  mod.rs  text_input_processor.rs  text_input_processor_ex.rs  thread_mgr_event_sink.rs
src/tsf/: candidate_list.rs  composition.rs  display_attribute_provider.rs  edit_session.rs  key_event_sink.rs  langbar_item.rs  mod.rs  text_input_processor.rs  thread_mgr_event_sink.rs
src/ui/: candidate_list.rs  mod.rs
