[package]
name = "ajemi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = "0.6"
chrono = "0.4.*"
atomic-counter = "1.0.*"

[dependencies.windows]
version = "0.*"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_TextServices",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader"
]

[lib]
crate-type = ["cdylib"]
