[package]
name = "ajemi"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
fern = "0.6"
chrono = "0.4"
winreg = "0.52"
parking_lot = "0.12"

[dependencies.windows]
version = "0.*"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_TextServices",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi"
]

[build-dependencies]
winres = "0.1"

[lib]
crate-type = ["cdylib"]
